# linkerd2-proxy

./: Cargo.toml  Dockerfile
.cargo/: config
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: k3d.yml
linkerd/app/core/src/: svc.rs
linkerd/app/gateway/src/: lib.rs
linkerd/app/inbound/: Cargo.toml
linkerd/app/inbound/src/: direct.rs  lib.rs
linkerd/app/inbound/src/http/: mod.rs  set_bad_gateway_header.rs
linkerd/app/integration/: Cargo.toml
linkerd/app/integration/src/: client.rs  identity.rs
linkerd/app/outbound/src/: discover.rs  endpoint.rs  ingress.rs  lib.rs  logical.rs  switch_logical.rs
linkerd/app/outbound/src/http/: detect.rs  endpoint.rs  logical.rs
linkerd/app/outbound/src/ingress/: mod.rs  tests.rs
linkerd/app/outbound/src/tcp/: connect.rs  logical.rs
linkerd/cache/src/: lib.rs
linkerd/dns/name/: Cargo.toml
linkerd/dns/name/src/: name.rs
linkerd/dns/src/: lib.rs
linkerd/error-metrics/src/: lib.rs
linkerd/http-retry/src/: replay.rs
linkerd/identity/: Cargo.toml
linkerd/identity/src/: lib.rs
linkerd/io/: Cargo.toml
linkerd/stack/src/: box_future.rs
linkerd/tls/: Cargo.toml
linkerd/tls/fuzz/: Cargo.toml
linkerd/tls/src/: client.rs  lib.rs
linkerd/tls/src/server/: mod.rs
