[package]
name = "linkerd-identity"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2018"

[features]
default = []
test-util = []

[dependencies]
linkerd-dns-name = { path = "../dns/name" }
ring = "0.16.19"
thiserror = "1.0"
tokio-rustls = { git = "https://github.com/tokio-rs/tls", branch = "eliza/rustls-0.20" }
# The 'dangerous_configuration' feature is required to set the
# `ServerCertVerifier` on `ClientConfig`.
rustls = { git = "https://github.com/ctz/rustls", features = ["dangerous_configuration"] }
rustls-pemfile = "0.2"
tracing = "0.1.26"
untrusted = "0.7"
webpki = "=0.22.0"


